      PR libstdc++/95322, PR libstdc++/97132, PR libstdc++/95788,
      PR tree-optimization/97081, PR tree-optimization/97456,
      PR c++/95132, PR c++/96241.
  * Also enable the extra checking on amd64, arm64, ppc64el, s390x, and don't
    strip the executables.  This will be reverted within a few weeks, please
    don't send bug reports about that.

 -- Matthias Klose <doko@debian.org>  Thu, 29 Oct 2020 13:29:37 +0100

gcc-10 (10.2.0-15) unstable; urgency=medium

  * Update to git 20201011 from the gcc-10 branch.
    - Fix PR target/97302, PR rtl-optimization/97313, PR middle-end/95189,
      PR middle-end/95886, PR target/97150 (AArch64), PR target/96313 (AArch64),
      PR tree-optimization/97236, PR target/96456 (S390), PR gcov-profile/97193,
      PR c++/88115, PR libstdc++/97273, PR c++/96994, PR c++/97195,
      PR c++/97145, PR fortran/97272, PR bootstrap/97163, PR gcov-profile/96913.
  * On armel, armhf, configure with --enable-checking=yes,extra,rtl, and don't
    strip the executables for now.

 -- Matthias Klose <doko@debian.org>  Sun, 11 Oct 2020 12:40:50 +0200

gcc-10 (10.2.0-14) experimental; urgency=medium

  * Update to git 20201002 from the gcc-10 branch.
    - Fix PR gcov-profile/64636, PR tree-optimization/96979,
      PR gcov-profile/97069, PR target/96795 (ARM), PR target/96827 (ARM),
      PR bootstrap/97183, PR target/97184 (x86).
  * Fix PR tree-optimization/97236, taken from the trunk. Stop reverting the
    fixes for PR tree-optimization/97043, PR tree-optimization/96522.
    Closes: #971027.
  * Enable gnat on m68k again (Adrian Glaubitz). Closes: #971551.

 -- Matthias Klose <doko@debian.org>  Fri, 02 Oct 2020 14:12:39 +0200

gcc-10 (10.2.0-13) unstable; urgency=medium

  * Update to git 20200930 from the gcc-10 branch.
    - Fix PR target/97247 (x86), PR target/97231 (x86), PR middle-end/97054.
    - Backport SVE ACLE and stack-protector patches (ARM, AArch64).
  * Revert the fix for PR tree-optimization/96522. See #971027.
