@@ -47,6 +47,8 @@ Depends: gcc-10-base (= ${gcc:Version}), ${shlibs:Depends}, ${misc:Depends}
 Provides: libgcc1 (= ${gcc:EpochVersion}), libgcc-s1-armel [armel], libgcc-s1-armhf [armhf]
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
+XB-Important: yes
+Protected: yes
 Breaks: ${libgcc:Breaks}
 Replaces: libgcc1 (<< 1:10)
 Description: GCC support library
@@ -61,6 +63,8 @@ Section: libs
 Priority: optional
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
+XB-Important: yes
+Protected: yes
 Depends: gcc-10-base (= ${gcc:Version}), ${shlibs:Depends}, ${misc:Depends}
 Provides: libgcc2 (= ${gcc:EpochVersion}), 
 Description: GCC support library
@@ -72,6 +76,8 @@ Package: libgcc-s4
 X-DH-Build-For-Type: target
 Architecture: hppa
 Multi-Arch: same
+XB-Important: yes
+Protected: yes
 Pre-Depends: ${misc:Pre-Depends}
 Provides: libgcc4 (= ${gcc:EpochVersion})
 Section: libs
