@@ -1047,6 +1047,7 @@ control-file:
 	  -Dgcn_archs="$(gcn_archs)" \
 	  -Dadd_built_using=$(add_built_using) \
 	  -DGCC_PORTS_BUILD=$(GCC_PORTS_BUILD) \
+	  $(if $(filter $(distrelease),sid bullseye groovy hirsute),-DLIBGCCPROTECTED=1) \
 	  -DLLVM_VER=$(gcn_tools_llvm_version) \
 		debian/control.m4 > debian/control.tmp2
 	uniq debian/control.tmp2 | grep -v '^  *, *$$' | sed '/^Build/s/ *, */, /g;/^  /s/ *, */, /g' \
