@@ -14,6 +14,7 @@ gcc-10 (10.2.0-16) UNRELEASED; urgency=medium
   * Also enable the extra checking on amd64, arm64, ppc64el, s390x, and don't
     strip the executables.  This will be reverted within a few weeks, please
     don't send bug reports about that.
+  * Mark libgcc-sN with XB-Important/Protected: yes. Addresses: #972936.
 
  -- Matthias Klose <doko@debian.org>  Thu, 29 Oct 2020 13:29:37 +0100
 
